# qt-bug-console

./: README.md
.github/scripts/: plane_release_stamp.py  plane_sync.py
.github/workflows/: plane-sync.yml  release-stamp.yml
ci-cd-drafts/: .gitignore  ADMIN_CHECKLIST.md  README.md
ci-cd-drafts/.github/workflows/: ci.yml
ci-cd-drafts/plane-cd/: README.md
ci-cd-drafts/plane-cd/.github/workflows/: release-stamp.yml
ci-cd-drafts/plane-sync/: README.md  demo-local.sh
ci-cd-drafts/plane-sync/.github/scripts/: plane_sync.py
ci-cd-drafts/plane-sync/.github/workflows/: plane-sync.yml
ci-cd-drafts/sample/: CMakeLists.txt  run-ci-local.sh
ci-cd-drafts/sample/src/: calc.cpp  calc.hpp  main.cpp
ci-cd-drafts/sample/tests/: test_calc.cpp
demo/: trigger.txt
